--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,8 +42,10 @@
             </intent-filter>
         </activity>
 
+
         <activity android:name=".MuslimShalat"/>
         <activity android:name=".MapsActivity"/>
+        <activity android:name=".Compass"/>
     </application>
 
 </manifest>
